# ros-i2c

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  LICENCE  README.md  pakk.cfg
docs/: LICENSE.txt  README.md
examples/: README.md  publishing.py  try_write_byte.py  try_write_hello_world.py  try_write_word.py  write_byte.py  write_hello_world.py  write_word.py
examples/arduino/: receive.ino
ros_i2c/: README.md  package.xml  setup.cfg  setup.py
ros_i2c/launch/: bridge.py  i2c.launch.py
ros_i2c/ros_i2c/: __init__.py  bridge.py  i2c.py
ros_i2c_interfaces/: CMakeLists.txt  README.md  package.xml
ros_i2c_interfaces/msg/: Write16.msg  Write8.msg  WriteArray.msg  WriteByte.msg  WriteWord.msg
ros_i2c_interfaces/srv/: TryWriteArray.srv  TryWriteByte.srv  TryWriteWord.srv
